@@ -39,7 +39,7 @@ have_func("OCITerminate")
 # OCIServerRelease
 #   8.1.5  - NG
 #   8.1.7  - OK
-have_func("OCIServerRelease")
+#have_func("OCIServerRelease")
 
 # OCILobOpen
 #   8.0.5  - NG
